--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,16 +1,9 @@
-# Configuration of Hugo
-# Guide: https://sourcethemes.com/academic/docs/get-started/
-# Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
-#
-# This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
-# Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
-
 # Title of your site
-title = "Academic"
+title = "Au brin de l'eau"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://brindo.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
@@ -24,7 +17,7 @@ copyright = ""
 enableGitInfo = false
 
 # Default language to use (if you setup multilingual support)
-defaultContentLanguage = "en"
+defaultContentLanguage = "fr"
 hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = false
 removePathAccents = true  # Workaround for https://github.com/gohugoio/hugo/issues/5687
