--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,10 +8,10 @@
   url = "/teachings"
   weight = 10
 
-[[main]]
-  name = "A propos de ..."
-  url = "/aboutme"
-  weight = 40
+#[[main]]
+#  name = "A propos de ..."
+#  url = "/aboutme"
+#  weight = 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
